<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        android:key="trick_show4gForLte"
        android:title="@string/show4gForLte_title"
        android:summary="@string/show4gForLte_summary"
        app:iconSpaceReserved="false"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="trick_hideLtePlus"
        android:title="@string/hideLtePlus_title"
        android:summary="@string/hideLtePlus_summary"
        app:iconSpaceReserved="false"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="trick_hideNextAlarm"
        android:title="@string/hideNextAlarm_title"
        android:summary="@string/hideNextAlarm_summary"
        app:iconSpaceReserved="false"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="trick_hideBuildVersion"
        android:title="@string/hideBuildVersion_title"
        android:summary="@string/hideBuildVersion_summary"
        app:iconSpaceReserved="false"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="trick_hideVpn"
        android:title="@string/hideVpn_title"
        android:summary="@string/hideVpn_summary"
        app:iconSpaceReserved="false"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="trick_hideCert"
        android:title="@string/hideCert_title"
        android:summary="@string/hideCert_summary"
        app:iconSpaceReserved="false"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="trick_hideAdGuard"
        android:title="@string/hideAdGuard_title"
        android:summary="@string/hideAdGuard_summary"
        app:iconSpaceReserved="false"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="trick_circleActiveApps"
        android:title="@string/circleActiveApps_title"
        android:summary="@string/circleActiveApps_summary"
        app:iconSpaceReserved="false"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="trick_hideAdbNotification"
        android:title="@string/hideAdbNotification_title"
        android:summary="@string/hideAdbNotification_summary"
        app:iconSpaceReserved="false"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="trick_proximityWakeUp"
        android:title="@string/proximityWakeUp_title"
        android:summary="@string/proximityWakeUp_summary"
        app:iconSpaceReserved="false"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="trick_powerTorch"
        android:title="@string/powerTorch_title"
        android:summary="@string/powerTorch_summary"
        app:iconSpaceReserved="false"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="trick_skipTrack"
        android:title="@string/skipTrack_title"
        android:summary="@string/skipTrack_summary"
        app:iconSpaceReserved="false"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="trick_screenOffNotifications"
        android:title="@string/screenOffNotifications_title"
        android:summary="@string/screenOffNotifications_summary"
        app:iconSpaceReserved="false"
        android:defaultValue="false" />

    <ListPreference
        android:key="trick_lessNotifications"
        android:title="@string/lessNotifications_title"
        android:entries="@array/lessNotifications_entries"
        android:entryValues="@array/lessNotifications_values"
        android:summary="%s"
        app:iconSpaceReserved="false"
        android:defaultValue="0" />

    <ListPreference
        android:key="trick_gestureHeight"
        android:title="@string/gestureHeight_title"
        android:entries="@array/gestureHeight_entries"
        android:entryValues="@array/gestureHeight_values"
        android:summary="%s"
        app:iconSpaceReserved="false"
        android:defaultValue="0" />

    <ListPreference
        android:key="trick_cursorControl"
        android:title="@string/cursorControl_title"
        android:entries="@array/cursorControl_entries"
        android:entryValues="@array/cursorControl_values"
        android:summary="%s"
        app:iconSpaceReserved="false"
        android:defaultValue="0" />

    <EditTextPreference
        android:key="trick_customCarrierText"
        android:title="@string/customCarrierText_title"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"
        android:defaultValue="" />

    <SwitchPreferenceCompat
        android:key="trick_OutlookPolicy"
        android:title="@string/OutlookPolicy_title"
        android:summary="@string/OutlookPolicy_summary"
        app:iconSpaceReserved="false"
        android:defaultValue="false" />

</PreferenceScreen>